tests/snapshots/cli_tests__cache_clean_no_cache.snap
---
source: tests/cli_tests.rs
info:
  program: queso
  args:
    - cache
    - clean
  env:
    HOME: /var/folders/fk/81495npj7z34wyxybhx25z200000gn/T/.tmpfpjFSB
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
      Clean no cache directory found
