tests/snapshots/cli_tests__cache_clean_with_cache.snap
---
source: tests/cli_tests.rs
info:
  program: queso
  args:
    - cache
    - clean
  env:
    HOME: /var/folders/fk/81495npj7z34wyxybhx25z200000gn/T/.tmppdZDjE
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
    Removed [HOME]/Library/Caches/queso (24 B)
