tests/snapshots/cli_tests__cache_help.snap
---
source: tests/cli_tests.rs
info:
  program: queso
  args:
    - cache
    - "--help"
---
success: true
exit_code: 0
----- stdout -----
Manage the global cache

Usage: queso cache <COMMAND>

Commands:
  clean  Remove cached ERTS downloads and payloads
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

----- stderr -----
