tests/snapshots/cli_tests__clean_no_artifacts.snap
---
source: tests/cli_tests.rs
info:
  program: queso
  args:
    - clean
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
          Clean no build artifacts found
