tests/snapshots/cli_tests__clean_with_artifacts.snap
---
source: tests/cli_tests.rs
info:
  program: queso
  args:
    - clean
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
        Removed [TEMPDIR]/build/queso (11 B)
